--- a/src/styles/sass/header.scss
+++ b/src/styles/sass/header.scss
@@ -1,64 +1,55 @@
-
 .navBar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: #FF6060;
-    font-weight: 500;
-    margin: 40px auto 40px auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #ff6060;
+  font-weight: 500;
+  margin: 40px auto 40px auto;
 
-   
+  &_logo {
+    &_img {
+      width: 210px;
 
-&_logo {
-         &_img {
-            width: 210px;
-
-            @media screen and (max-width: 768px) {
-               width: 145px;
-               }
-        }
-
+      @media screen and (max-width: 768px) {
+        width: 145px;
+      }
     }
- 
+  }
 
- &_link1 {
-    color: #FF6060;
+  &_link1 {
+    color: #ff6060;
     text-decoration: none;
     font-size: 24px;
-   padding-left: 25%;
+    padding-left: 25%;
     @media screen and (max-width: 768px) {
       font-size: 12px;
       padding-left: 13%;
-      text-transform:uppercase;
-   }
-
- }
- &_link1.active:hover {
+      text-transform: uppercase;
+    }
+  }
+  &_link1.active:hover {
     filter: brightness(0.9);
- }
- &_link1.active {
+  }
+  &_link1.active {
     text-decoration: underline;
- }
-
- &_link2 {
-   color: #FF6060;
-   text-decoration: none;
-   font-size: 24px;
-   
-   @media screen and (max-width: 768px) {
-     margin: auto;
-     font-size: 12px;
-     padding: 0 0 0 18px;
-     text-transform:uppercase;
   }
 
-}
-&_link2.active:hover {
-   filter: brightness(0.9);
-}
-&_link2.active {
-   text-decoration: underline;
-}
+  &_link2 {
+    color: #ff6060;
+    text-decoration: none;
+    font-size: 24px;
 
-
+    @media screen and (max-width: 768px) {
+      margin: auto;
+      font-size: 12px;
+      padding: 0 0 0 18px;
+      text-transform: uppercase;
+    }
+  }
+  &_link2.active:hover {
+    filter: brightness(0.9);
+  }
+  &_link2.active {
+    text-decoration: underline;
+  }
 }
